10 - with dev mode all + jwt

--- a/10.0/Dockerfile
+++ b/10.0/Dockerfile
@@ -19,7 +19,7 @@ RUN set -x; \
         && apt-get -y install -f --no-install-recommends \
         && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false npm \
         && rm -rf /var/lib/apt/lists/* wkhtmltox.deb \
-        && pip install psycogreen==1.0
+        && pip install psycogreen==1.0 PyJWT==1.4.2
 
 # Install Odoo
 ENV ODOO_VERSION 10.0
@@ -52,4 +52,4 @@ ENV ODOO_RC /etc/odoo/odoo.conf
 USER odoo
 
 ENTRYPOINT ["/entrypoint.sh"]
-CMD ["odoo"]
+CMD ["odoo", "--dev=all"]
